filter impacted equipments
Signed-off-by: souissimai <maissa.souissi@rte-france.com>